finalizando a section de fotos principais e inicializandoa de medias

--- a/index.html
+++ b/index.html
@@ -27,9 +27,38 @@
         <video  src="videos/bg-header.mp4" type="video/mp4"autoplay loop muted playsinline></video>
         <div class="container-global-home">
             <h1>Elisa Maria Vitória Alves Guimarães</h1>
-            <p>Modelo versátil, apaixonada por expressar através da câmera.</p>
-            <p>Adoro explorar diferentes estilos e me adaptar a cadaproposta com autenticidade e profissionalismo.</p>
+            <a href=""><button>conheça</button></a>
         </div>
     </header>
+    <section class="sub-header">
+        <div class="container-apresentacao">
+            <p>Nascida em Belo Horizonte e criada em São Paulo, Elisa carrega na bagagem uma mistura rica de cultura, elegância e atitude. Com um olhar marcante e uma beleza que celebra com orgulho suas raízes afro-brasileiras, ela vem se consolidando como um nome em ascensão no cenário da moda nacional. Eleita Miss São Paulo 2023, já realizou participações em campanhas de beleza com a L'Oréal e outros projetos voltados para maquiagem e autoestima. Com presença forte e naturalidade diante das câmeras, ela representa uma geração de modelos que não apenas vestem tendências, mas também inspiram representatividade e autenticidade na moda brasileira.</p>
+        </div>
+    </section>
+
+    <section class="principais-fotos">
+        <img src="img/img01.jpg" alt="foto da elisa">
+        <img src="img/img05.jpg" alt="foto da elisa">
+        <img src="img/img08.jpg" alt="foto da elisa">
+    </section>
+
+    <section class="ficha-tecnica">
+        <div class="container-ficha">
+            <h2>Medidas</h2>
+            <ul>
+                <li>Altura: 1,65</li>
+                <li>Busto: 92</li>
+                <li>Cintura: 81</li>
+                <li>Quadril: 1,12</li>
+                <li>Ombros: 1,15</li>
+                <li>Cintura até o calcanhar: 1,06</li>
+                <li>Ombro ao calcanhar: 1,37</li>
+                <li>Tamanha vestido: M</li>
+                <li>Tamanha blusa: P</li>
+                <li>Tamanha short: 38/40</li>
+                <li>Tamanha calça:38/40</li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
