finalizando a section de galeria

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/ficha.css">
+    <link rel="stylesheet" href="css/galeria.css">
     <title>Potifolio Elisa</title>
 </head>
 <body>
@@ -46,18 +48,45 @@
         <div class="container-ficha">
             <h2>Medidas</h2>
             <ul>
-                <li>Altura: 1,65</li>
-                <li>Busto: 92</li>
-                <li>Cintura: 81</li>
-                <li>Quadril: 1,12</li>
-                <li>Ombros: 1,15</li>
-                <li>Cintura até o calcanhar: 1,06</li>
-                <li>Ombro ao calcanhar: 1,37</li>
+                <li>Altura: 1,65m</li>
+                <li>Busto: 92cm</li>
+                <li>Cintura: 81cm</li>
+                <li>Quadril: 1,12m</li>
+                <li>Ombros: 1,15m</li>
+                <li>Cintura até o calcanhar: 1,06m</li>
+                <li>Ombro ao calcanhar: 1,37m</li>
                 <li>Tamanha vestido: M</li>
                 <li>Tamanha blusa: P</li>
                 <li>Tamanha short: 38/40</li>
                 <li>Tamanha calça:38/40</li>
             </ul>
+        </div>
+    </section>
+
+    <section class="galeria-fotos">
+        <h2>Galeria de fotos</h2>
+        <div class="recentes">
+            <h3>recentes</h3>
+            <div class="container-galeria-fotos-recentes">
+                <img src="img/img01.jpg" alt="foto da elisa">
+                <img src="img/img02.jpg" alt="foto da elisa">
+                <img src="img/img03.jpg" alt="foto da elisa">
+                <img src="img/img04.jpg" alt="foto da elisa">
+            </div-container-galeria>
+        </div>
+
+        
+        <h3>Outras fotos</h3>
+        <div class="outras-fotos">
+            <div class="container-galeria-fotos-recentes">
+                <img src="img/img05.jpg" alt="foto da elisa">
+                <img src="img/img06.jpg" alt="foto da elisa">
+                <img src="img/img07.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img09.jpg" alt="foto da elisa">
+                <img src="img/img10.jpg" alt="foto da elisa">
+                <img src="img/img11.jpg" alt="foto da elisa">
+            </div-container-galeria>
         </div>
     </section>
 </body>
