--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/ficha.css">
     <link rel="stylesheet" href="css/galeria.css">
     <link rel="stylesheet" href="css/projeto.css">
+    <link rel="stylesheet" href="css/destaques.css">
     <title>Potifolio Elisa</title>
 </head>
 <body>
@@ -78,9 +79,9 @@
         </div>
 
         
-        <h3>Outras fotos</h3>
+        <h3 class="title-outras">Outras fotos</h3>
         <div class="outras-fotos">
-            <div class="container-galeria-fotos-recentes">
+            <div class="container-galeria-fotos-outras">
                 <img src="img/img05.jpg" alt="foto da elisa">
                 <img src="img/img06.jpg" alt="foto da elisa">
                 <img src="img/img07.jpg" alt="foto da elisa">
@@ -88,7 +89,20 @@
                 <img src="img/img09.jpg" alt="foto da elisa">
                 <img src="img/img10.jpg" alt="foto da elisa">
                 <img src="img/img11.jpg" alt="foto da elisa">
-            </div-container-galeria>
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+                <img src="img/img08.jpg" alt="foto da elisa">
+            </div>
         </div>
     </section>
 
@@ -173,7 +187,7 @@
     <section class="destaques">
         <div class="container-destaques">
             <h2>Destaques</h2>
-            <video src="videos/destaque01.mp4"></video>
+            <video src="videos/destaque01.mp4"controls></video>
         </div>
     </section>
 
