finalizando pagina de destaques

--- a/index.html
+++ b/index.html
@@ -186,11 +186,23 @@
 
     <section class="destaques">
         <div class="container-destaques">
-            <h2>Destaques</h2>
-            <video src="videos/destaque01.mp4"controls></video>
+            <h2>Destaques:</h2>
+            <div class="container-videos">
+                <video src="videos/video02.mp4"controls></video>
+                <video src="videos/video04.mp4"controls></video>
+                <video src="videos/video06.mp4"controls></video>
+                <video src="videos/video07.mp4"controls></video>
+            </div>
         </div>
     </section>
 
+    <!--<section class="contato">
+        <div class="container-contato">
+            <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h2>
+
+        </div>
+    </section>
+-->
 
     <script src="script/script.js"></script>
 </body>
