inicializando pagina de contato

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/galeria.css">
     <link rel="stylesheet" href="css/projeto.css">
     <link rel="stylesheet" href="css/destaques.css">
+    <link rel="stylesheet" href="css/contato.css">
     <title>Potifolio Elisa</title>
 </head>
 <body>
@@ -196,13 +197,17 @@
         </div>
     </section>
 
-    <!--<section class="contato">
+    <section class="contato">
         <div class="container-contato">
-            <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h2>
-
+            <h2>Para propostas profissionais, parcerias ou outras informações, entre em contato através dos canais disponíveis. Será um prazer responder!</h2>
+            <div class="container-icons-contato">
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-whatsapp"></i></a>
+                <a href=""><i class="fab fa-facebook"></i></a>
+                <a href=""><i class="fas fa-envelope"></i></a>
+            </div>
         </div>
     </section>
--->
 
     <script src="script/script.js"></script>
 </body>
