--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <img src="img/img-projetos/img-dança.jpeg" alt="">
         </div>
     </section>
-
+<!--
     <section class="destaques">
         <div class="container-destaques">
             <h2>Destaques:</h2>
@@ -193,6 +193,25 @@
                 <video src="videos/video04.mp4"controls></video>
                 <video src="videos/video06.mp4"controls></video>
                 <video src="videos/video07.mp4"controls></video>
+            </div>
+        </div>
+    </section>
+-->
+    <section class="destaques">
+        <div class="container-destaques">
+            <h2>Destaques:</h2>
+
+            <div class="carousel-wrapper-video">
+                <button class="carousel-btn-video left" onclick="scrollCarousel(-1)">‹</button>
+
+                <div class="container-videos" id="carousel">
+                  <video src="videos/video02.mp4" controls></video>
+                  <video src="videos/video04.mp4" controls></video>
+                  <video src="videos/video06.mp4" controls></video>
+                  <video src="videos/video07.mp4" controls></video>
+                </div>
+
+                <button class="carousel-btn-video right" onclick="scrollCarousel(1)">›</button>
             </div>
         </div>
     </section>
