--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <video  src="videos/bg-header.mp4" type="video/mp4"autoplay loop muted playsinline></video>
         <div class="container-global-home">
             <h1>Elisa Maria Vitória Alves Guimarães</h1>
-            <a href=""><button>conheça</button></a>
+            <a href="#about"><button>conheça</button></a>
         </div>
     </header>
     <section id="about">
@@ -72,7 +72,7 @@
     <section class="galeria-fotos" id="photo">
         <h2>Galeria de fotos</h2>
         <div class="recentes">
-            <h3>recentes</h3>
+            <h3>Destaques Recentes</h3>
             <div class="container-galeria-fotos-recentes">
                 <img src="img/img01.jpg" alt="foto da elisa">
                 <img src="img/fotos elisa/img31.JPG" alt="foto da elisa">
@@ -199,10 +199,10 @@
         <div class="container-contato">
             <h2>Para propostas profissionais, parcerias ou outras informações, entre em contato através dos canais disponíveis. Será um prazer responder!</h2>
             <div class="container-icons-contato">
-                <a href=""><i class="fab fa-instagram"></i></a>
-                <a href=""><i class="fab fa-whatsapp"></i></a>
-                <a href=""><i class="fab fa-facebook"></i></a>
-                <a href=""><i class="fas fa-envelope"></i></a>
+                <a href="https://www.instagram.com/elisaallvesx?utm_source=ig_web_button_share_sheet&igsh=MXBkaTk1cm5saDlnZA==" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://wa.me/5511975711069?text=oii%2C%20tudo%20bem%3F%20Vi%20seu%20portfolio%20e%20quero%20saber%20mais%20sobre%20a%20sua%20disponibilidade%20como%20modelo" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </section>
