atualizando erro de digitação

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                     <li>Ombros: 1,15m</li>
                     <li>Cintura até o calcanhar: 1,06m</li>
                     <li>Ombro ao calcanhar: 1,37m</li>
-                    <li>Tamanha vestido: M</li>
-                    <li>Tamanha blusa: P</li>
-                    <li>Tamanha short: 38/40</li>
-                    <li>Tamanha calça:38/40</li>
+                    <li>Tamanho vestido: M</li>
+                    <li>Tamanho blusa: P</li>
+                    <li>Tamanho short: 38/40</li>
+                    <li>Tamanho calça:38/40</li>
                 </ul>
             </div>
         </section>
